--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
                 {% endif %}
               {% endfor %}
 
-              <!-- About -->
+              <!-- About
               <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
                 <a class="nav-link" href="{{ '/' | relative_url }}">{{ about_title }}
                   {%- if page.permalink == '/' -%}
@@ -51,6 +51,8 @@
                   {%- endif -%}
                 </a>
               </li>
+              -->
+              
               {% if site.blog_nav_title %}
               <!-- Blog -->
               <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
