--- a/_includes/cv/time_table.html
+++ b/_includes/cv/time_table.html
@@ -27,6 +27,10 @@
             {% if content.title %}
             <h6 class="title font-weight-bold ml-1 ml-md-4">{{content.title}}</h6>
             {% endif %}
+            {% if content.honors %}
+              <!--<div class="ml-1 ml-md-4 ">{{ content.honors }}</div>-->
+              <div class="font-italic ml-1 ml-md-4">{{ content.honors }}</div>
+            {% endif %}
             {% if content.department or content.institution %}
             <table class="table-cv ml-1 ml-md-4 institution">
             <tbody>
