Adding bios and fixing grammar errors

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,9 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-description">{{ page.description }}</p>
+    {%- if page.note -%}
+    <p class="post-description">{{ page.note }}</p>
+    {%- endif -%}
   </header>
 
   <article>
