--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -4,7 +4,7 @@ layout: default
 <!-- _layouts/cv.html -->
 {% unless site.data.resume %}
 <div class="post">
-
+<!-- Currently using this section: _data/cv.yml -->
   <header class="post-header">
     <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
       {% if page.description %}<p class="post-description">{{ page.description }}</p>{% endif %}
@@ -39,7 +39,7 @@ layout: default
 </div>
 {% else %}
 <div class="post">
-
+<!-- This section uses assets/json/resume.json -->
   <header class="post-header">
     <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
     {% if page.description %}<p class="post-description">{{ page.description }}</p>{% endif %}
