--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,6 @@
 <div id="disqus_thread" style="max-width: {{ site.max_width }}; margin: 0 auto;">
     <script type="text/javascript">
-        var disqus_shortname  = '{{ site.disqus_shortname }}';
+        var disqus_shortname  = '{{ page.giscus_repo }}';
         var disqus_identifier = '{{ page.id }}';
         var disqus_title      = {{ page.title | jsonify }};
         (function() {
