--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -167,10 +167,11 @@ blockquote {
   .more-info {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family: monospace;
+    font-family: inherit;
+    font-size: 1rem;
 
     p {
-      display: inline-block;
+      display: flex;
       margin: 0;
     }
   }
